--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mandelbrot Set — A Mathematical Romance</title>
-    <meta property="og:title" content="Mandelbrot Set — A Mathematical Romance">
+    <title>Mandelbrot Set Explorer</title>
+    <meta property="og:title" content="Mandelbrot Set Explorer">
     <meta property="og:description" content="An elegant exploration of infinite complexity">
     <meta property="twitter:card" content="summary_large_image">
     <style>
