--- a/index.html
+++ b/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandelbrot Set Explorer</title>
-    <meta property="og:title" content="Mandelbrot Set Explorer">
-    <meta property="og:description" content="An elegant exploration of infinite complexity">
+    <meta name="description" content="Experience the go-to Mandelbrot Set viewer—GPU-accelerated zooming, precise iteration control, cinematic palettes, and export-ready fractal renders.">
+    <meta name="keywords" content="best mandelbrot viewer, go-to mandelbrot set viewer, fractal explorer, interactive mandelbrot zoom, complex plane visualization, generative art tool, WebGL fractals, mathematical art software">
+    <meta name="author" content="Fractal Explorers">
+    <meta name="application-name" content="Mandelbrot Set Explorer">
+    <meta name="apple-mobile-web-app-title" content="Mandelbrot Viewer">
+    <meta name="subject" content="Premier Mandelbrot Set viewer">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="theme-color" content="#0a0a0a">
+    <link rel="canonical" href="https://fractal-explorers.com/mandelbrot-explorer">
+    <meta property="og:title" content="Best Mandelbrot Set Viewer | Mandelbrot Set Explorer">
+    <meta property="og:description" content="Experience the definitive Mandelbrot viewer with fluid zooming, advanced controls, and exportable fractal art.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fractal-explorers.com/mandelbrot-explorer">
+    <meta property="og:site_name" content="Fractal Explorers">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="/Screenshot%202025-11-10%20at%2015.21.19.png">
+    <meta property="og:image:width" content="1600">
+    <meta property="og:image:height" content="900">
+    <meta property="og:image:alt" content="Zoomed Mandelbrot Set Explorer interface showing intricate fractal detail">
     <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Go-To Mandelbrot Set Viewer">
+    <meta name="twitter:description" content="Discover the premier Mandelbrot viewer with buttery zoom, iteration tuning, and cinematic palettes ready to share.">
+    <meta name="twitter:image" content="/Screenshot%202025-11-10%20at%2015.21.19.png">
+    <meta name="twitter:site" content="@fractalexplorers">
+    <meta name="twitter:creator" content="@fractalexplorers">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "SoftwareApplication",
+            "name": "Mandelbrot Set Explorer",
+            "applicationCategory": "EducationalApplication",
+            "operatingSystem": "Web",
+            "url": "https://fractal-explorers.com/mandelbrot-explorer",
+            "description": "Experience the go-to Mandelbrot Set viewer with GPU-accelerated zooming, precise iteration control, cinematic palettes, and export-ready fractal renders.",
+            "screenshot": "https://fractal-explorers.com/Screenshot%202025-11-10%20at%2015.21.19.png",
+            "featureList": [
+                "Interactive Mandelbrot zooming and panning",
+                "Adjustable iteration depth and precision",
+                "Multiple cinematic colour palettes",
+                "High-resolution fractal downloads",
+                "GPU-accelerated rendering"
+            ],
+            "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "USD"
+            },
+            "publisher": {
+                "@type": "Organization",
+                "name": "Fractal Explorers",
+                "url": "https://fractal-explorers.com"
+            }
+        }
+    </script>
     <style>
         * {
             margin: 0;
